updating repository with EntityController and EntitySpecification
