# src/Controller/Entity/EntityController.php
@@ -13,14 +13,13 @@ use Psr\Http\Message\ServerRequestInterface as Request;
 use Slim\Http\Response;
 use TDW\ACiencia\Controller\ElementBaseController;
 use TDW\ACiencia\Entity\Entity;
-use TDW\ACiencia\Utility\Error;
 
 /**
  * Class EntityController
  */
 class EntityController extends ElementBaseController
 {
-    /** @var string ruta api gestión entityas  */
+    /** @var string ruta api gestión entidades  */
     public const PATH_ENTITIES = '/entities';
 
     /**
@@ -32,8 +31,7 @@ class EntityController extends ElementBaseController
      */
     public function cget(Request $request, Response $response): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->getAllElements($request,$response,Entity::class,'entities');
     }
 
     /**
@@ -47,8 +45,7 @@ class EntityController extends ElementBaseController
      */
     public function get(Request $request, Response $response, array $args): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->getElementById($request,$response,Entity::class,$args['entityId']);
     }
 
     /**
@@ -61,8 +58,7 @@ class EntityController extends ElementBaseController
      */
     public function getEntityname(Request $request, Response $response, array $args): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->getElementByName($response,Entity::class,$args['entityname']);
     }
 
     /**
@@ -75,8 +71,7 @@ class EntityController extends ElementBaseController
      */
     public function delete(Request $request, Response $response, array $args): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->opDelete($request,$response,Entity::class,$args['entityId']);
     }
 
     /**
@@ -88,8 +83,7 @@ class EntityController extends ElementBaseController
      */
     public function post(Request $request, Response $response): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->opPost($request,$response,Entity::class);
     }
 
     /**
@@ -102,7 +96,7 @@ class EntityController extends ElementBaseController
      */
     public function put(Request $request, Response $response, array $args): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        $args['id'] = $args['entityId'];
+        return $this->opPut($request,$response,$args,Entity::class);
     }
 }
